--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div><h1>Quiz</h1></div>
+    <div>
+        <div>
+            <h1>Pakistan Studies Quiz</h1>
+        </div>
+        <div>
+            <fieldset>
+                <legend>Question 1</legend>
+                <h2>What is the capital of Pakistan?</h2>
+                <br>
+                <input type="radio" name="q1" id="q1a">Karachi <br>
+                <input type="radio" name="q1" id="q1b">Islamabad <br>
+                <input type="radio" name="q1" id="q1c">Lahore <br>
+                <input type="radio" name="q1" id="q1d">Quetta <br>
+            </fieldset> <br>
+            <fieldset>
+                <legend>Question 2</legend>
+                <h2>Who is the president of Pakistan?</h2>
+                <br>
+                <input type="radio" name="q2" id="q2a">Imran Khan <br>
+                <input type="radio" name="q2" id="q2b">Shah Mehmood Qureshi <br>
+                <input type="radio" name="q2" id="q2c">Arif Alvi <br>
+                <input type="radio" name="q2" id="q2d">Jave Iqbal <br>
+            </fieldset> <br>
+            <fieldset>
+                <legend>Question 3</legend>
+                <h2>What is the capital of Balochistan?</h2>
+                <br>
+                <input type="radio" name="q3" id="q3a">Karachi <br>
+                <input type="radio" name="q3" id="q3b">Islamabad <br>
+                <input type="radio" name="q3" id="q3c">Lahore <br>
+                <input type="radio" name="q3" id="q3d">Quetta <br>
+            </fieldset> <br>
+            <fieldset>
+                <legend>Question 4</legend>
+                <h2>What is the capital of Punjab?</h2>
+                <br>
+                <input type="radio" name="q4" id="q4a">Karachi <br>
+                <input type="radio" name="q4" id="q4b">Islamabad <br>
+                <input type="radio" name="q4" id="q4c">Lahore <br>
+                <input type="radio" name="q4" id="q4d">Quetta <br>
+            </fieldset> <br>
+            <button>Submit</button>
+        </div>
+    </div>
 </body>
+<script src="app.js"></script>
+
 </html>
