--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <input type="radio" name="q4" id="q4c">Lahore <br>
                 <input type="radio" name="q4" id="q4d">Quetta <br>
             </fieldset> <br>
-            <button>Submit</button>
+            <button onclick="checking()" >Submit</button>
         </div>
     </div>
 </body>
